<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_img"
    tools:context=".Activity1">

    <EditText
        android:paddingTop="100dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_catID"
        android:hint="@string/edit_CatID"
        android:textColor="#fff"
        android:textColorHint="#D3D3D3"
        android:inputType="number"/>
    <EditText
        android:layout_below="@+id/edit_catID"
        android:paddingTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_Desc"
        android:hint="@string/edit_Desc"
        android:textColor="#fff"
        android:textColorHint="#D3D3D3"
        android:inputType="text"/>
    <EditText
        android:layout_below="@+id/edit_Desc"
        android:paddingTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_EventDate"
        android:hint="@string/edit_EventDate"
        android:textColor="#fff"
        android:textColorHint="#D3D3D3"
        android:inputType="datetime"/>
    <EditText
        android:layout_below="@+id/edit_EventDate"
        android:paddingTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_Minutes"
        android:hint="@string/edit_Minutes"
        android:textColor="#fff"
        android:textColorHint="#D3D3D3"
        android:inputType="text"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_Minutes"
        android:text="@string/btnSubmit"
        android:onClick="convertToJSon"
        />

</RelativeLayout>
